# AICodeforcer

./: .env  README.md  pyproject.toml
src/AICodeforcer/: __init__.py  main.py
src/AICodeforcer/agents/: __init__.py  brute_force.py  cpp_translator.py  solver.py
src/AICodeforcer/interactive/agents/: judge_validator.py  preprocessor.py  solver.py
src/AICodeforcer/interactive/tools/: interactive_stress_test.py
src/AICodeforcer/standard/agents/: brute_force.py  cpp_translator.py  solver.py
src/AICodeforcer/standard/tools/: stress_test.py
src/AICodeforcer/tools/: __init__.py  executor.py  run_python.py  stress_test.py
src/codeforce_fucker/: __init__.py  main.py  types.py
src/codeforce_fucker/agents/: __init__.py  solver.py  translator.py
src/codeforce_fucker/tools/: __init__.py  executor.py  run_python.py  stress_test.py
